--- a/src/main/resources/templates/user_details/_address.html
+++ b/src/main/resources/templates/user_details/_address.html
@@ -189,9 +189,7 @@
         <div>
             <ul>
                 <span th:unless="${#lists.isEmpty(allBillingAddress)}">
-                        <tr th:each="address, iStat: ${allBillingAddress}" >
-                             <input type="hidden" id="addressId" class="addressId" th:value="${address.getAddressId()}">
-
+                        <tr th:each="address, iStat: ${allBillingAddress}">
                         <div class="address-element-padding" id="accordion">
                         <div class="billingAddress">
                             <div class="product_content">
@@ -267,7 +265,7 @@
                                                  style="color: black;">
                                                 Name
                                             </div>
-
+                                            <input type="hidden" id="addressId"  th:value="${address.getAddressId()}">
                                             <input type="text" id="billing_address_update_name"
                                                    th:value="${address.getName()}" class="checkout_input form-control"
                                                    placeholder="Name" pattern="^[a-zA-Z ]+$" required="required">
@@ -534,7 +532,7 @@
                                     <select name="delivery_address_province"
                                             id="delivery_address_province"
                                             class="dropdown_item_select checkout_input"
-                                            require="required">
+                                            required="required">
                                         <option value="">SELECT</option>
                                         <option value="Cankaya">Cankaya</option>
                                     </select>
@@ -602,7 +600,7 @@
             <ul>
                 <!-- Registered address 1 -->
                 <span th:unless="${#lists.isEmpty(allDeliveryAddress)}">
-                 <div th:if="${allDeliveryAddress != null}">
+                 <span th:if="${allDeliveryAddress != null}">
                         <tr th:each="address: ${allDeliveryAddress}">
                      <div class="address-element-padding">
                     <div class="billingAddress">
@@ -612,8 +610,8 @@
                                     <td th:text="${address.getAddressTitle()}"></td>
                                 </div>
                                 <div class="col-md-3">
-                                    <a href="#delivery_address_update"
-                                       class="trans_200" data-toggle="collapse"><i
+                                    <a data-toggle="collapse" th:href= "'#delivery_address_update' + ${address.getAddressId()}"
+                                       class="trans_200" ><i
                                             style="font-size: 25px; padding-right: 10px"
                                             class="fa fa-pencil"></i></a>
                                     <a href="#" class="trans_200" data-toggle="collapse" id="delete_delivery_address"><i
@@ -639,28 +637,20 @@
                         </div>
                     </div>
                      </div>
-                </tr>
-                </div>
+
                     <!--No Delivery Address-->
                     <div th:if="${allDeliveryAddress== null}">
                         <div class="warning-text" style="display: none">There are no billing addresses.</div>
                     </div>
 
-
-                </span>
-
-                <!-- No Delivery Address -->
-                <span th:if="${#lists.isEmpty(allDeliveryAddress)}">
-                    <div class="warning-text">There are no Delivery Addresses.</div>
-                </span>
                 <!-- Update address form -->
-                <div id="delivery_address_update" class="collapse">
+                <div th:id="'delivery_address_update' + ${address.getAddressId()}" class="collapse">
 
                     <div class="address-container">
                         <div class="billingAddress">
                             <div class="checkout_form_container">
                                 <form action="#" id="delivery_address_update_form"
-                                      class="checkout_form">
+                                      class="checkout_form" method="post">
 
                                     <!-- Address Title -->
                                     <div>
@@ -668,15 +658,15 @@
                                             Address Title
                                         </div>
 
-                                        <select name="delivery_address_update_title"
-                                                id="delivery_address_update_title"
+                                        <select id="delivery_address_update_title"
+                                                name="delivery_address_update_title"
+                                                th:value="${address.getAddressTitle()}"
                                                 class="dropdown_item_select checkout_input"
                                                 required="required">
-                                            <option value="">SELECT</option>
-                                            <option value="Home">Home</option>
-                                            <option value="Workplace">Workplace</option>
-                                            <option value="Summery">Summery</option>
-                                            <option value="Other">Other</option>
+                                             <option th:each="add : ${T(com.oak.bookyourshelf.model.Address.AddressTitle).values()}"
+                                                     th:value="${add}"
+                                                     th:text="#{${'add.' + add}}">addressTitle
+                                            </option>
                                         </select>
                                     </div>
 
@@ -688,8 +678,9 @@
                                                  style="color: black;">
                                                 Name
                                             </div>
-
+                                            <input type="hidden" id="delivery_addressId" th:value="${address.getAddressId()}">
                                             <input type="text" id="delivery_address_update_name"
+                                                   th:value="${address.getName()}"
                                                    class="checkout_input form-control"
                                                    placeholder="Name" pattern="^[a-zA-Z ]+$" required="required">
                                         </div>
@@ -702,6 +693,7 @@
 
                                             <input type="text"
                                                    id="delivery_address_update_surname"
+                                                   th:value="${address.getSurname()}"
                                                    class="checkout_input form-control"
                                                    placeholder="Surname" pattern="^[a-zA-Z ]+$" required="required">
                                         </div>
@@ -715,9 +707,11 @@
 
                                         <select name="delivery_address_update_country"
                                                 id="delivery_address_update_country"
+                                                th:value="${address.getCountry()}"
                                                 class="dropdown_item_select checkout_input"
-                                                size="1" required="required">
-                                            <option value="" selected="selected">SELECT</option>
+                                                required="required">
+                                                <option th:value="Turkey">Turkey</option>
+                                                <option th:value="USA">USA</option>
 
                                         </select>
                                     </div>
@@ -733,9 +727,11 @@
 
                                             <select name="delivery_address_update_city"
                                                     id="delivery_address_update_city"
+                                                    th:value="${address.getCity()}"
                                                     class="dropdown_item_select checkout_input"
                                                     size="1" required="required">
-                                                <option value="" selcted="selected">SELECT</option>
+                                                    <option th:value="Ankara">Ankara</option>
+                                                    <option th:value="LasVegas">LasVegas</option>
                                             </select>
                                         </div>
                                         <div class="col-lg-6">
@@ -747,9 +743,11 @@
 
                                             <select name="delivery_address_update_province"
                                                     id="delivery_address_update_province"
+                                                    th:value="${address.getProvince()}"
                                                     class="dropdown_item_select checkout_input"
-                                                    size="1" required="required">
-                                                <option value="" selected="selected">SELECT</option>
+                                                    required="required">
+                                                <option th:value="cankaya">cankaya</option>
+                                                <option th:value="SanFransisco">SanFransisco</option>
                                             </select>
                                         </div>
                                     </div>
@@ -765,6 +763,7 @@
 
                                             <input type="text"
                                                    id="delivery_address_update_neighborhood"
+                                                   th:value="${address.getNeighborhood()}"
                                                    class="checkout_input form-control"
                                                    pattern="^[a-zA-Z ]+$" required="required">
                                         </div>
@@ -776,6 +775,7 @@
                                             </div>
 
                                             <input type="number" id="delivery_address_update_zip_code"
+                                                   th:value="${address.getZipCode()}"
                                                    class="checkout_input form-control" required="required">
 
                                         </div>
@@ -787,6 +787,7 @@
                                             Address
                                         </div>
                                         <input type="text" id="delivery_update_open_address_id"
+                                               th:value="${address.getFullAddress()}"
                                                class="checkout_input form-control"
                                                placeholder="Full Address" required="required">
                                     </div>
@@ -798,6 +799,7 @@
                                             Number
                                         </div>
                                         <input type="tel" id="delivery_address_update_phone"
+                                               th:value="${address.getPhoneNumber()}"
                                                class="checkout_input form-control phone_mask"
                                                placeholder="(XXX) XXX XX XX" pattern="^[0-9 ]+$"
                                                required="required">
@@ -814,6 +816,14 @@
                         </div>
                     </div>
                 </div>
+                        </tr>
+                 </span>
+                </span>
+
+                <!-- No Delivery Address -->
+                <span th:if="${#lists.isEmpty(allDeliveryAddress)}">
+                    <div class="warning-text">There are no Delivery Addresses.</div>
+                </span>
             </ul>
         </div>
     </div>
@@ -823,6 +833,7 @@
     /*<![CDATA[*/
 
     $('#update_billing_address').click(function (event) {
+
         var button_2 = $(this).attr("id");
         var name = $('#billing_address_update_name').val();
         var surname = $('#billing_address_update_surname').val();
@@ -838,8 +849,6 @@
         var userId = /*[[${user.getUserId()}]]*/ 'default';
         var user = /*[[${user}]]*/ 'default';
 
-        document.write("In js");
-        document.write(addressId);
 
         var ret = {
 
@@ -883,6 +892,7 @@
                 });
             })
         }
+
     });
 
     /*]]>*/
@@ -903,6 +913,7 @@
         var fullAddress = $('#delivery_update_open_address_id').val();
         var addressTitle = $('#delivery_address_update_title').val();
         var phoneNumber = $('#delivery_address_update_phone').val();
+        var addressId = $('#delivery_addressId').val();
         var userId = /*[[${user.getUserId()}]]*/ 'default';
         var user = /*[[${user}]]*/ 'default';
 
@@ -921,6 +932,7 @@
             addressTitle: addressTitle,
             phoneNumber: phoneNumber,
             userId: userId,
+            addressId:addressId,
             user: user
 
         };
