--- a/src/main/resources/templates/user_details/_wish-list.html
+++ b/src/main/resources/templates/user_details/_wish-list.html
@@ -33,7 +33,7 @@
                                         </div>
 
                                          <div th:if="${product.getProductTypeName() == 'Book' || product.getProductTypeName() == 'E-Book' || product.getProductTypeName() == 'Audio Book'}">
-                                             <div class="product_text">
+                                             <div class="cart-product-text">
                                                  <span th:each="authors, iterStat : ${product.getAuthors()}"
                                                        th:text="${!iterStat.last} ? ${authors} + ', ': ${authors}" style="display:inline">
                                                  </span>
@@ -41,13 +41,13 @@
                                          </div>
                                         <!-- Case Brand -->
                                         <div th:if="${product.getProductTypeName() == 'E-Book Reader Case' || product.getProductTypeName() == 'Book Case'}">
-                                            <div class="product_text">
+                                            <div class="cart-product-text">
                                                 <td th:text="${product.getCaseBrand()}"></td>
                                             </div>
                                         </div>
                                         <!-- Tablet Brand -->
                                         <div th:if="${product.getProductTypeName() == 'E-Book Reader'}">
-                                            <div class="product_text">
+                                            <div class="cart-product-text">
                                                 <td th:text="${product.getReaderBrand()}"></td>
                                             </div>
                                         </div>
@@ -64,7 +64,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <span>Price:</span> <span style="display:block" th:text="${product.getPrice() - product.getPrice() * product.getDiscountRate() + '₺'}"></span>
+                                <span>Price:</span> <span style="display:block" th:text="${#numbers.formatDecimal(product.getPrice() - product.getPrice() * product.getDiscountRate(),0,2)} + '₺'"></span>
                             </div>
                         </li>
                     </tr>
