--- a/src/main/resources/static/styles/category.css
+++ b/src/main/resources/static/styles/category.css
@@ -819,86 +819,11 @@ section {
     font-weight: 500;
 }
 
-.products_dropdown {
-    cursor: pointer;
-}
-
-.product_dropdown_filter {
-    width: 114px;
-    position: relative;
-}
-
-.product_dropdown_sorting {
-    margin-right: 59px;
-    position: relative;
-}
-
 .isotope_filter_text span,
 .isotope_sorting_text span {
     font-size: 16px;
     font-weight: 400;
     color: #969696;
-}
-
-.products_dropdown i {
-    margin-left: 9px;
-    font-size: 14px;
-    color: #bcbcbc;
-    -webkit-transition: all 200ms ease;
-    -moz-transition: all 200ms ease;
-    -ms-transition: all 200ms ease;
-    -o-transition: all 200ms ease;
-    transition: all 200ms ease;
-}
-
-.products_dropdown:hover i {
-    color: #000000;
-}
-
-.products_dropdown > ul {
-    position: absolute;
-    top: 100%;
-    right: -15px;
-    visibility: hidden;
-    opacity: 0;
-    width: 100px;
-    z-index: 111111;
-    text-align: right;
-    background: #f6f8fa;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 13px;
-    padding-bottom: 15px;
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
-    -webkit-transition: all 200ms ease;
-    -moz-transition: all 200ms ease;
-    -ms-transition: all 200ms ease;
-    -o-transition: all 200ms ease;
-    transition: all 200ms ease;
-}
-
-.products_dropdown ul li:not(:last-child) {
-    margin-bottom: 7px;
-}
-
-.products_dropdown ul li {
-    font-size: 14px;
-    font-weight: 400;
-    color: #bcbcbc;
-    -webkit-transition: all 200ms ease;
-    -moz-transition: all 200ms ease;
-    -ms-transition: all 200ms ease;
-    -o-transition: all 200ms ease;
-    transition: all 200ms ease;
-}
-
-.products_dropdown ul li:hover {
-    color: #000000;
-}
-
-.products_dropdown:hover > ul {
-    visibility: visible;
-    opacity: 1;
 }
 
 .product_view {
@@ -1811,4 +1736,100 @@ section {
     padding-bottom: 10px;
     overflow: hidden;
     background-color: #ffffff;
+}
+
+.products_dropdown i {
+    margin-left: 9px;
+    font-size: 14px;
+    color: #bcbcbc;
+    -webkit-transition: all 200ms ease;
+    -moz-transition: all 200ms ease;
+    -ms-transition: all 200ms ease;
+    -o-transition: all 200ms ease;
+    transition: all 200ms ease;
+}
+
+.products_dropdown:hover i {
+    color: #000000;
+}
+
+.products_dropdown > ul {
+    position: absolute;
+    top: 100%;
+    visibility: hidden;
+    opacity: 0;
+    width: 170px;
+    z-index: 111111;
+    background: #f6f8fa;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 13px;
+    padding-bottom: 15px;
+    margin-top: 1px;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
+    -webkit-transition: all 200ms ease;
+    -moz-transition: all 200ms ease;
+    -ms-transition: all 200ms ease;
+    -o-transition: all 200ms ease;
+    transition: all 200ms ease;
+    max-height: 200px;
+    overflow: hidden;
+    overflow-y: scroll;
+}
+
+.products_dropdown ul li:not(:last-child) {
+    margin-bottom: 8px;
+}
+
+.products_dropdown ul li a {
+    font-size: 13px;
+    font-weight: 400;
+    color: #bcbcbc;
+    -webkit-transition: all 200ms ease;
+    -moz-transition: all 200ms ease;
+    -ms-transition: all 200ms ease;
+    -o-transition: all 200ms ease;
+    transition: all 200ms ease;
+    cursor: pointer;
+}
+
+.products_dropdown ul li a:hover {
+    color: #000000;
+}
+
+.products_dropdown:hover > ul {
+    visibility: visible;
+    opacity: 1;
+}
+
+.product_dropdown_sorting {
+    position: relative;
+    width: 170px;
+    border-radius: 5px;
+    border: 1px #b3b3b3 solid;
+}
+
+.isotope_sorting_text {
+    text-align: center;
+    cursor: pointer;
+}
+
+.isotope_filter_text {
+    text-align: center;
+    cursor: pointer;
+}
+
+.isotope_filter_text span,
+.isotope_sorting_text span {
+    font-size: 16px;
+    font-weight: 400;
+    color: #969696;
+}
+
+.product_dropdown_filter {
+    position: relative;
+    width: 170px;
+    border-radius: 5px;
+    border: 1px #b3b3b3 solid;
+    margin-left: 10px;
 }
